--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   border: 0;
   outline: 0;
   box-sizing: none;
-  list-style: none;
+  
   text-decoration: none;
 }
 
@@ -36,6 +36,7 @@ body {
   color: var(--color-white);
   line-height: 1.7;
   background-color: #f5f5f5;
+  font-size: 0.9rem;
 }
 
 .container {
@@ -90,7 +91,8 @@ a:hover{
 
 .btn:hover {
   background: var(--color-white);
-  color: var(--color-bg);
+  color: white;
+  border:none;
 }
 
 .btn-primary {
