--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -26,17 +26,28 @@
 }
 
 .about_me_image > img {
-    height: 23rem;
+    height: 21rem;
 }
 
 .about_me_image:hover {
     transform: rotate(0);
 }
-
+.about_content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    font-size: 0.9rem;
+}
 .about_content p {
     margin: 2rem 0 2.6rem;
-    color: rgba(0, 0,0, 0.5);
 }
+.about_content>ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-star
+}
+
 
 /* media query (medium device) */
 @media screen and (max-width: 1024px){
@@ -51,7 +62,7 @@
     }
 
     .about_content p {
-        margin: 1rem 0 1.5rem;
+        margin: 2rem 0 1.5rem;
     }
 
     .about_me_image > img {
@@ -72,8 +83,9 @@
         text-align: center;
     }
 
-    .about_content p {
+    .about_content>p {
         margin: 1.5rem 0;
+        color:rgb(15, 13, 13);
     }
     .about_me_image > img {
         height: 15rem;
