--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -43,9 +43,10 @@
     margin: 2rem 0 2.6rem;
 }
 .about_content>ul{
+    margin: 0rem 1rem;
     display: flex;
     flex-direction: column;
-    align-items: flex-star
+    align-items: flex-start;
 }
 
 
@@ -84,11 +85,21 @@
     }
 
     .about_content>p {
-        margin: 1.5rem 0;
+        display: flex;
+        text-align:left;  
+        flex-direction: column;
+        margin: 1.5rem 1rem;
         color:rgb(15, 13, 13);
     }
     .about_me_image > img {
         height: 15rem;
     }
+    .about_content>ul{
+        margin: 0rem 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
     
   }
